[package]
name = "default_is_triple_underscore"
authors = ["Mewily <thomas.mewily@gmail.com>"]
description = """
Shorter syntax for Default::default() : ___()
"""
version = "0.1.1"
edition = "2021"

license = "MIT OR Apache-2.0 OR MPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/default_is_triple_underscore"
homepage = "https://github.com/Thomas-Mewily/triple_underscore_for_default"
repository  = "https://github.com/Thomas-Mewily/triple_underscore_for_default"

[dependencies]
